# dishy

./: .gitignore  CLAUDE.md  README.md  SPEC.md
.github/workflows/: api.yml  deploy-api.yml  mobile.yml
apps/api/: Cargo.toml  wrangler.toml
apps/api/src/: auth.rs  errors.rs  lib.rs  logging.rs  middleware.rs
apps/api/src/db/: mod.rs  queries.rs  schema.sql
apps/api/src/db/migrations/: 0001_initial_schema.sql  0002_recipes_user_id.sql  0003_capture_async_columns.sql  0003_capture_pipeline_tracking.sql
apps/api/src/middleware/: auth.rs  mod.rs
apps/api/src/pipeline/: contracts.rs  errors.rs  mod.rs  queue.rs
apps/api/src/routes/: images.rs  mod.rs  recipes.rs
apps/api/src/services/: cover.rs  extraction.rs  ingredient_parser.rs  ingredient_resolver.rs  mod.rs  nutrition.rs  ocr.rs  social.rs  storage.rs
apps/api/src/types/: capture.rs  ids.rs  ingredient.rs  mod.rs  nutrition.rs  pipeline.rs  recipe.rs
apps/api/tests/: auth_test.rs  health_test.rs  me_test.rs
apps/mobile/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
apps/mobile/android/app/: build.gradle.kts
apps/mobile/integration_test/: capture_view_cook_test.dart
apps/mobile/ios/Runner/: Info.plist
apps/mobile/lib/: app.dart  main.dart
apps/mobile/linux/: CMakeLists.txt
apps/mobile/test/: api_client_test.dart  auth_guard_test.dart  auth_provider_test.dart  auth_state_test.dart  sign_in_screen_test.dart  widget_test.dart
apps/mobile/web/: index.html  manifest.json
apps/mobile/windows/: CMakeLists.txt
docs/adr/: 001-tech-stack.md  002-observability.md  003-authentication.md  004-domain-model.md  005-capture-pipeline.md  006-ingredient-nutrition-pipeline.md  007-cover-generation.md  007-cover-image-generation.md  008-ai-extraction-queues.md  008-ai-extraction.md  009-ux-surfaces.md
(+84 files in other folders)
