[package]
name = "dishy-api"
version = "0.1.0"
edition = "2021"
description = "Dishy API — Cloudflare Worker powering the recipe capture and cooking app"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ["http"] }
worker-macros = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
jsonwebtoken = { version = "10", default-features = false }
thiserror = "2"
base64 = "0.22"

[dev-dependencies]
serde_json = "1"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "s"
